personal-number, email, password

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Form Validation Assignment</title>
-    <script src="src/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
     <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
@@ -34,3 +34,4 @@
     </dialog>    
   </body>
 </html>
+
